--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* Used as the background on all pages. */
 body{
 
     background: url(../images/darkrocks.jpg);
@@ -6,11 +7,13 @@ body{
     background-attachment: fixed;
 }
 
+/* Used on every page as the main article underline */
 .border-bottom{
 
     color: azure;
 }
 
+/* Nav bar hover effect start */
 #hhp0:hover{
 
     color: hotpink !important;   
@@ -38,7 +41,9 @@ body{
     color: white;
     font-size: 1.5rem;
 }
+/* Nav bar hover effect end */
 
+/* Sticky footer */
 #sf{
 
     width: 100%;
@@ -47,6 +52,7 @@ body{
 
 }
 
+/* Facebook hover effect */
 #fb1:hover{
     background-color: hotpink !important;
 }
